# SAR-Level1-Conditioning

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: streamlit_app.py
configs/: bundle_a.yaml  bundle_a_conservative.yaml  bundle_b.yaml  bundle_c.yaml  bundle_d.yaml  final_sweep.yaml
configs/datasets/: external_detection_template.yaml  sentinel1_slc_small.yaml  sentinel1_small.yaml
configs/downstream/: yolo_baseline.yaml  yolo_medium.yaml  yolo_serious.yaml  yolo_smoke.yaml
docs/: BUNDLE_METHOD_GUIDE.md  DATA_DOWNLOAD_GUIDE_DENOISING.md  FINAL_RESULTS_INTERPRETATION.md  GIT_RELEASE_CHECKLIST.md  PDF_ALIGNMENT_AUDIT.md  PUBLIC_MEETING_BRIEF.md  PUBLIC_RELEASE_CHECKLIST.md  RESULTS_SUMMARY.md
manifests/: public_release_manifest.yaml
notebooks/: 02_bundle_a.ipynb  03_bundle_b.ipynb  04_bundle_c.ipynb  05_bundle_d.ipynb  06_comparison_pack.ipynb
results/public/: bundle_matrix.csv  data_strategy.csv  final_denoising_metrics.csv  project_summary.json  project_summary.md  tuning_profiles.csv
scripts/: __init__.py  audit_datasets.py  build_demo_index.py  check_repo_surface.py  download_sentinel1_samples.py  evaluate_denoising_quality.py  export_figures.py  fetch_sentinel1_subset.py  generate_handoff_pack.py  make_denoising_panels.py  make_final_figures.py  prepare_sentinel1_local.py  register_local_dataset.py  run_bundle_a.py  run_bundle_b.py  run_bundle_c.py  run_bundle_d.py  run_detection_baseline.py  run_final_sweep.py  setup_public_datasets.py  validate_external_detection_dataset.py
scripts/downstream/: __init__.py  run_detection_baseline.py
scripts/sentinel1/: __init__.py  expand_sentinel1_evidence.py  inspect_sentinel1_local.py  plan_sentinel1_evidence.py  run_bundle_a_sentinel1_batch.py
src/bundles/: __init__.py  bundle_a_classical.py  bundle_b_noiseaware.py  bundle_c_selfsupervised.py  bundle_d_inverse_problem.py  common.py
src/datasets/: __init__.py  ai4arctic_loader.py  audit.py  common.py  custom_loader.py  hrsid_loader.py  (+10 more)
tests/: test_bundle_a_submethods.py  test_bundle_configs.py  test_custom_loader.py  test_decision_support.py  test_downstream_detection_yolo.py  test_evaluation_scoring.py  test_execution_policy.py  test_intensity_statistics.py  test_mendeley_denoising.py  test_metadata_parsing.py  test_result_index.py  test_run_summary_artifacts.py  test_sentinel1_batch.py  test_sentinel1_catalog.py  test_sentinel1_loader.py  test_simulation.py  test_stage1_ops.py
(+55 files in other folders)
